feat: 기능 활성화